fix(api): ignore records on zone updates
